--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,21 +1,29 @@
 name: docker-compose
-on: push
+
+on: [push, pull_request]
+
 jobs:
   test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
 
-      - name: build the stack
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: "Checkout Project"
+        uses: actions/checkout@v2
+
+      - name: "Build AWX stack"
         run: cd docker && docker-compose up -d
 
-      - name: list running containers
+      - name: "List all running containers"
         run: docker ps -a
 
-      - name: sleep
+      - name: "Wait for AWX to be available"
         uses: jakejarvis/wait-action@master
         with:
           time: '90s'
 
-      - name: test awx connectivity
-        run: docker exec awx_web curl -I web:8052/api/v2/ping
+      - name: "Test AWX connectivity"
+        run: docker exec awx_web curl -I localhost:8052/api/v2/ping
+
+      - name: "Perform playbook tests"
+        run: echo "Add playbook tests here"
