--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,8 +13,7 @@ jobs:
     - name: Install Collections
       run: |
         sudo apt install software-properties-common
-        sudo apt-add-repository --yes --update ppa:ansible/ansible
-        sudo apt install ansible
+        sudo pip install ansible
         ansible-galaxy collection install -f -r .github/collections/requirements.yml
     - name: Hack pre-commit
       # https://github.com/pre-commit/action/issues/44
