--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -12,8 +12,7 @@ jobs:
     - uses: actions/setup-python@v2
     - name: Install Collections
       run: |
-        sudo apt install software-properties-common
-        sudo pip install ansible
+        pip install -r .github/requirements.txt
         ansible-galaxy collection install -f -r .github/collections/requirements.yml
     - name: Hack pre-commit
       # https://github.com/pre-commit/action/issues/44
