--- a/.github/collections/requirements.yml
+++ b/.github/collections/requirements.yml
@@ -1,5 +1,5 @@
 ---
 collections:
-  - name: git@github.com:ansible/awx.git#/awx_collection/
+  - name: https://github.com/ansible/awx.git#/awx_collection/
     type: git
     version: devel
