--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,6 +13,7 @@ jobs:
     - name: Install Collections
       run: |
         sudo apt install software-properties-common
+        sudo apt-get install python3-setuptools
         sudo -H pip3 install ansible
         ansible-galaxy collection install -f -r .github/collections/requirements.yml
     - name: Hack pre-commit
