--- a/.github/workflows/pre-commit_awx_devel.yml
+++ b/.github/workflows/pre-commit_awx_devel.yml
@@ -13,9 +13,9 @@ jobs:
     - name: Install Collections
       run: |
         sudo apt install software-properties-common
-        sudo apt-add-repository --yes --update ppa:ansible/ansible
-        sudo apt install ansible
-        ansible-galaxy collection install -f -r .github/collections/requirements.yml
+        sudo apt-get install python3-setuptools
+        sudo -H pip3 install ansible
+        ansible-galaxy collection install -f -r .github/collections/requirements_awx_devel.yml
     - name: Hack pre-commit
       # https://github.com/pre-commit/action/issues/44
       run: |
