--- a/.github/workflows/testing_playbooks_awx_devel.yml
+++ b/.github/workflows/testing_playbooks_awx_devel.yml
@@ -11,13 +11,13 @@ jobs:
       - name: "Checkout Project"
         uses: actions/checkout@v2
 
+      - name: "Build AWX stack"
+        run: cd .github/docker && docker-compose up -d
+
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
-
-      - name: "Clone AWX"
-        run: cd .github && git clone https://github.com/ansible/awx.git
 
       - name: "Install dependencies"
         run: pip install -r .github/requirements.txt
@@ -25,16 +25,17 @@ jobs:
       - name: Display Versions
         run: which python && pip --version && ansible --version
 
-      - name: "Build AWX stack"
-        run: cd .github/awx/installer && ansible-playbook -i inventory install.yml -e create_preload_data=false
+      - name: "List all running containers"
+        run: docker ps -a
 
-      - name: "Wait for awx to be alive"
-        uses: nev7n/wait_for_response@v1
+      - name: "Wait for AWX to be available"
+        uses: jakejarvis/wait-action@master
         with:
-          url: 'http://localhost/api/v2/ping'
-          responseCode: 200
-          timeout: 600000  # Wait max 10 mins for response
-          interval: 3000
+          time: '90s'
+
+      - name: "Test AWX connectivity"
+        #run: docker exec awx_web curl -I localhost:8052/api/v2/ping
+        run: curl -I localhost/api/v2/ping
 
       - name: "Install Galaxy dependencies"
         run: ansible-galaxy collection install -r .github/collections/requirements_awx_devel.yml
