--- a/.github/workflows/testing_playbooks_awx_devel.yml
+++ b/.github/workflows/testing_playbooks_awx_devel.yml
@@ -31,11 +31,11 @@ jobs:
       - name: Wait / Sleep
         uses: jakejarvis/wait-action@v0.1.0
         with:
-          time: '90s'          
+          time: '90s'
 
       - name: "Test AWX connectivity"
-        #run: docker exec awx_web curl -I localhost:8052/api/v2/ping
-        run: curl -I localhost/api/v2/ping
+        run: docker exec awx_web curl -I localhost:8052/api/v2/ping
+        #run: curl -I localhost/api/v2/ping
 
       - name: "Install Galaxy dependencies"
         run: ansible-galaxy collection install -r .github/collections/requirements_awx_devel.yml
@@ -46,7 +46,7 @@ jobs:
           time: '20s'
 
       - name: "Perform playbook tests"
-        run: ansible-playbook playbooks/configure_tower.yml -e tower_hostname=http://localhost -e tower_username=admin -e tower_password=password
+        run: ansible-playbook playbooks/configure_tower.yml -e tower_hostname=http://localhost:8052 -e tower_username=admin -e tower_password=password
 
       - name: "Perform export model playbook tests"
-        run: ansible-playbook playbooks/configure_tower_export_model.yml -e tower_hostname=http://localhost -e tower_username=admin -e tower_password=password
+        run: ansible-playbook playbooks/configure_tower_export_model.yml -e tower_hostname=http://localhost:8052 -e tower_username=admin -e tower_password=password
