--- a/.github/workflows/testing_playbooks.yml
+++ b/.github/workflows/testing_playbooks.yml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - name: "Checkout Project"
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2
+
+      - run: git checkout devel
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
