--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -10,8 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        fetch-depth: 2
-    - run: git checkout devel
+        ref: devel
     - uses: actions/setup-python@v2
     - name: Install Collections
       run: |
