--- a/.github/workflows/testing_playbooks_awx_devel.yml
+++ b/.github/workflows/testing_playbooks_awx_devel.yml
@@ -34,8 +34,12 @@ jobs:
           time: '120s'
 
       - name: "Test AWX connectivity"
-        run: docker exec awx_web curl -I localhost:8052/api/v2/ping
         #run: curl -I localhost/api/v2/ping
+        uses: nick-invision/retry@v1
+        with:
+          timeout_minutes: 10
+          max_attempts: 30
+          command: docker exec awx_web curl -I localhost:80/api/v2/ping
 
       - name: "Install Galaxy dependencies"
         run: ansible-galaxy collection install -r .github/collections/requirements_awx_devel.yml
@@ -46,7 +50,7 @@ jobs:
           time: '20s'
 
       - name: "Perform playbook tests"
-        run: ansible-playbook playbooks/configure_tower.yml -e tower_hostname=http://localhost:8052 -e tower_username=admin -e tower_password=password
+        run: ansible-playbook playbooks/configure_tower.yml -e tower_hostname=http://localhost:80 -e tower_username=admin -e tower_password=password
 
       - name: "Perform export model playbook tests"
-        run: ansible-playbook playbooks/configure_tower_export_model.yml -e tower_hostname=http://localhost:8052 -e tower_username=admin -e tower_password=password
+        run: ansible-playbook playbooks/configure_tower_export_model.yml -e tower_hostname=http://localhost:80 -e tower_username=admin -e tower_password=password
