--- a/.github/workflows/testing_playbooks_awx_devel.yml
+++ b/.github/workflows/testing_playbooks_awx_devel.yml
@@ -11,13 +11,13 @@ jobs:
       - name: "Checkout Project"
         uses: actions/checkout@v2
 
+      - name: "Build AWX stack"
+        run: cd .github/docker && docker-compose up -d
+
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
-
-      - name: "Clone AWX"
-        run: cd .github && git clone https://github.com/ansible/awx.git
 
       - name: "Install dependencies"
         run: pip install -r .github/requirements.txt
@@ -25,13 +25,13 @@ jobs:
       - name: Display Versions
         run: which python && pip --version && ansible --version
 
-      - name: "Build AWX stack"
-        run: cd .github/awx/installer && ansible-playbook -i inventory install.yml -e create_preload_data=false
+      - name: "List all running containers"
+        run: docker ps -a
 
       - name: "Wait for awx to be alive"
         uses: nev7n/wait_for_response@v1
         with:
-          url: 'http://localhost/api/v2/ping'
+          url: 'http://localhost:80/api/v2/ping'
           responseCode: 200
           timeout: 600000  # Wait max 10 mins for response
           interval: 3000
