--- a/.github/workflows/testing_playbooks.yml
+++ b/.github/workflows/testing_playbooks.yml
@@ -21,6 +21,9 @@ jobs:
       - name: "Clone AWX"
         run: cd .github && git clone https://github.com/ansible/awx.git
 
+      - name: "Clone AWX"
+        run: git checkout tags/14.1.0 -b devel
+
       - name: "Install dependencies"
         run: pip install -r .github/requirements.txt
 
@@ -47,7 +50,5 @@ jobs:
           time: '20s'
 
       - name: "Perform playbook tests"
-        run: ansible-playbook playbooks/configure_tower.yml -e tower_hostname=http://localhost -e tower_username=admin -e tower_password=password
+        run: ansible-playbook playbooks/configure_tower.yml -e tower_hostname=http://localhost -e tower_username=admin -e tower_password=password -vvv
 
-      - name: "Perform export model playbook tests"
-        run: ansible-playbook playbooks/configure_tower_export_model.yml -e tower_hostname=http://localhost -e tower_username=admin -e tower_password=password
