--- a/.github/tower37/docker-compose.yml
+++ b/.github/tower37/docker-compose.yml
@@ -1,8 +1,10 @@
-version: '2'
+---
+version: '3'
+
 services:
 
   web:
-    image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7:3.7.3
+    image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7
     container_name: awx_web
     depends_on:
       - redis
@@ -23,7 +25,7 @@ services:
       - "./assets/redis_socket:/var/run/redis/:rw"
 
   task:
-    image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7:3.7.3
+    image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7
     container_name: awx_task
     depends_on:
       - redis
@@ -58,13 +60,14 @@ services:
     container_name: awx_postgres
     restart: unless-stopped
     volumes:
-      - "~/.awx/pgdocker/10/data/:/var/lib/postgresql/data:Z"
+      - awx_db:/var/lib/postgresql/data:Z
     environment:
       POSTGRES_USER: awx
       POSTGRES_PASSWORD: awxpass
       POSTGRES_DB: awx
 
 volumes:
+  awx_db:
   supervisor-socket:
   rsyslog-socket:
   rsyslog-config:
