--- a/.github/tower37/docker-compose.yml
+++ b/.github/tower37/docker-compose.yml
@@ -1,8 +1,9 @@
 ---
+# @author Anthony Loukinas <anthony.loukinas@redhat.com>
+
 version: '3'
 
 services:
-
   web:
     image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7
     container_name: awx_web
@@ -10,7 +11,7 @@ services:
       - redis
       - postgres
     ports:
-      - "80:8052"
+      - '80:8052'
     hostname: awxweb
     user: root
     restart: unless-stopped
@@ -18,11 +19,15 @@ services:
       - supervisor-socket:/var/run/supervisor
       - rsyslog-socket:/var/run/awx-rsyslog/
       - rsyslog-config:/var/lib/awx/rsyslog/
-      - "./assets/SECRET_KEY:/etc/tower/SECRET_KEY"
-      - "./assets/environment.sh:/etc/tower/conf.d/environment.sh"
-      - "./assets/credentials.py:/etc/tower/conf.d/credentials.py"
-      - "./assets/nginx.conf:/etc/nginx/nginx.conf:ro"
-      - "./assets/redis_socket:/var/run/redis/:rw"
+      - ./assets/SECRET_KEY:/etc/tower/SECRET_KEY
+      - ./assets/environment.sh:/etc/tower/conf.d/environment.sh
+      - ./assets/credentials.py:/etc/tower/conf.d/credentials.py
+      - ./assets/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./assets/redis_socket:/var/run/redis/:rw
+    environment:
+      http_proxy:
+      https_proxy:
+      no_proxy:
 
   task:
     image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7
@@ -39,35 +44,45 @@ services:
       - supervisor-socket:/var/run/supervisor
       - rsyslog-socket:/var/run/awx-rsyslog/
       - rsyslog-config:/var/lib/awx/rsyslog/
-      - "./assets/SECRET_KEY:/etc/tower/SECRET_KEY"
-      - "./assets/environment.sh:/etc/tower/conf.d/environment.sh"
-      - "./assets/credentials.py:/etc/tower/conf.d/credentials.py"
-      - "./assets/redis_socket:/var/run/redis/:rw"
+      - ./assets/SECRET_KEY:/etc/tower/SECRET_KEY
+      - ./assets/environment.sh:/etc/tower/conf.d/environment.sh
+      - ./assets/credentials.py:/etc/tower/conf.d/credentials.py
+      - ./assets/redis_socket:/var/run/redis/:rw
     environment:
+      http_proxy:
+      https_proxy:
+      no_proxy:
       SUPERVISOR_WEB_CONFIG_PATH: '/etc/supervisord.conf'
 
   redis:
-    image: registry.redhat.io/rhscl/redis-5-rhel7:latest
+    image: redis
     container_name: awx_redis
     restart: unless-stopped
-    command: ["/etc/redis.conf"]
+    environment:
+      http_proxy:
+      https_proxy:
+      no_proxy:
+    command: ["/usr/local/etc/redis/redis.conf"]
     volumes:
-      - "./assets/redis.conf:/etc/redis.conf:ro"
-      - "./assets/redis_socket:/var/run/redis/:rw"
+      - ./assets/redis.conf:/usr/local/etc/redis/redis.conf:ro
+      - ./assets/redis_socket:/var/run/redis/:rw
 
   postgres:
     image: postgres:10
     container_name: awx_postgres
     restart: unless-stopped
     volumes:
-      - awx_db:/var/lib/postgresql/data:Z
+      - awx-postgres-db:/var/lib/postgresql/data:Z
     environment:
       POSTGRES_USER: awx
       POSTGRES_PASSWORD: awxpass
       POSTGRES_DB: awx
+      http_proxy:
+      https_proxy:
+      no_proxy:
 
 volumes:
-  awx_db:
   supervisor-socket:
   rsyslog-socket:
   rsyslog-config:
+  awx-postgres-db:
