--- a/.github/tower37/docker-compose.yml
+++ b/.github/tower37/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       no_proxy:
 
   task:
-    image: registry.redhat.io/ansible-tower-37/ansible-tower-rhel7
+    build: ./
     container_name: awx_task
     depends_on:
       - redis
